--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-server.port=8080
-
-#database specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/employee
+#db specific properties
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:db1}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Gopal@123
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:12345678}
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
