Application poperties updated

--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #db specific properties
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:db1}
+spring.datasource.url=mysql://root:aKgIWDeO92ibKIbpt9ND@containers-us-west-136.railway.app:6228/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:12345678}
+spring.datasource.password=${MYSQLPASSWORD:aKgIWDeO92ibKIbpt9ND}
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
