--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:6836}/${MYSQLDATABASE:railway}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:12345678}
+spring.datasource.password=${MYSQLPASSWORD:i5ibEJe9PieET0xcZnAD}
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
