--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #db specific properties
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:6836}/${MYSQLDATABASE:railway}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:db1}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:i5ibEJe9PieET0xcZnAD}
+spring.datasource.password=${MYSQLPASSWORD:12345678}
 
 #ORM s/w specific properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
