--- a/EmployeeManagement/pom.xml
+++ b/EmployeeManagement/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>EmployeeManagement</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>EmployeeManagement</name>
     <description>EmployeeManagement</description>
     <properties>
