--- a/EmployeeManagement/src/main/resources/application.properties
+++ b/EmployeeManagement/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:employee}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=${DB_USERNAME:root}
-#spring.datasource.password=${DB_PASSWORD:root}
-##ORM s/w specific properties
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://dpg-cgnvq2ou9tun42uc31g0-a:5432/shopme
+spring.datasource.username=masterdb_ov8h
+spring.datasource.password=iiCDm5K4B9QREbLxCNcsKcsxex5Wiq1J
+#ORM s/w specific properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
